--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cancel">cancel</string>
+    <string name="photoTxt">Take picture</string>
 </resources>
