--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/values/strings.xml
@@ -53,4 +53,56 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cancel">cancel</string>
     <string name="photoTxt">Take picture</string>
+    <string name="analysis_picture">Analysis picture</string>
+    <string name="choose_picture">Choose picture</string>
+    <string name="back_to_homepage">Back to homepage</string>
+    <string name="image_galery">Image Galery</string>
+    <string name="choose_picture_title">Choose picture</string>
+    <string name="disease_information">Disease Information</string>
+    <string name="imagedisease">ImageDisease</string>
+    <string name="disease_name">Disease name :</string>
+    <string name="impact">Impact :</string>
+    <string name="cause">Cause :</string>
+    <string name="identification">Identification :</string>
+    <string name="how_to_treat_the_disease">How to treat the disease :</string>
+    <string name="login">LOGIN</string>
+    <string name="login_txt">Please log in first to get started !</string>
+    <string name="username">USERNAME</string>
+    <string name="username_login">Username</string>
+    <string name="password">PASSWORD</string>
+    <string name="password_login">password123</string>
+    <string name="show_pass">Toggle Password Visibility</string>
+    <string name="login_btn">Login</string>
+    <string name="register_direct">Don\'t have any account? click here</string>
+    <string name="my_profile">My Profile</string>
+    <string name="username_profile">Username :</string>
+    <string name="email_profile">Email :</string>
+    <string name="name_profile">Name :</string>
+    <string name="city_profile">City :</string>
+    <string name="register">REGISTER</string>
+    <string name="register_txt">Please register first to create your account</string>
+    <string name="email_txt">Input your email</string>
+    <string name="username_txt">Input your username</string>
+    <string name="name_txt">Input your name</string>
+    <string name="password_profile">Password :</string>
+    <string name="password_txt">input your password</string>
+    <string name="city_txt">Input your city</string>
+    <string name="register_btn">Register</string>
+    <string name="back_to_login">Back to login</string>
+    <string name="result">Result</string>
+    <string name="confidence">Confidence :</string>
+    <string name="disease">Disease</string>
+    <string name="disease_txt">Here is a list of diseases on bean leaves</string>
+    <string name="homepage">Homepage</string>
+    <string name="main_feature">Main Feature</string>
+    <string name="mainfeature_txt">Here are the main features of this application</string>
+    <string name="take_picture">take picture</string>
+    <string name="take_picture_txt">Take picture</string>
+    <string name="choose_picutre">choose picutre</string>
+    <string name="choose_picture_txt">Choose Picture</string>
+    <string name="profile">profile</string>
+    <string name="account">Account</string>
+    <string name="setting">Setting</string>
+    <string name="logout">Logout</string>
+    <string name="disease_image">Disease Image</string>
 </resources>
